@@ -2,8 +2,12 @@ package web;
 
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
+import org.springframework.validation.BindingResult;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
+
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.validation.Valid;
 
 @Controller
 public class AddController {
@@ -15,9 +19,19 @@ public class AddController {
 	}
 
 	@PostMapping("/add")
-	public String add(AddModel addModel, Model model) {
-		System.out.println(addModel.getFirst());
-		addModel.setResult(addModel.getFirst() + addModel.getSecond());
+	public String add(@Valid AddModel addModel, BindingResult result, Model model) {
+		
+		
+		if(result.hasErrors()) {
+			model.addAttribute("message", result.getAllErrors().get(0).getDefaultMessage());
+		    addModel.setResult(0);   
+		}
+		else 
+		{
+		    addModel.setResult(addModel.getFirst() + addModel.getSecond());
+		    model.addAttribute("message", "");
+		}
+		
 		model.addAttribute("addModel", addModel);
 		return "add";
 	}
